test/Dialect/ZKIR/Inputs/header_6.zkir
// Imported via `include_fail.zkir`

module attributes {veridise.lang = "zkir"} {
  // expected-error@+1 {{array must have a shape of at least one element}}
  zkir.func private @b(%x: !zkir.array<!zkir.felt>) 
}
